--- a/propostas/templates/propostas/propostas_apresentadas.html
+++ b/propostas/templates/propostas/propostas_apresentadas.html
@@ -13,101 +13,44 @@
   {% include "reload.html" %}
 
   <style>
-		line.axis {
-			stroke-width: 2;
-			stroke: #c3c3c3;
-		}
-		line.tick {
-			stroke-width: 1;
-			stroke: #c3c3c3;
-		}
-
-		line.tick-a, text.tick-a {
-			stroke: #c30000;
-		}
-
-		line.tick-b, text.tick-b {
-			stroke: #0000c3;
-		}
-
-		line.tick-c, text.tick-c {
-			stroke: #008000;
-		}
-
-    line.tick-p, text.tick-p {
-			stroke: #00A0A0;
-		}
-
-    line.tick-y, text.tick-y {
-			stroke: brown;
-		}
-
-		text.tick-text {
-			font-family: "arial";
-			font-size: 10px;
-      fill-opacity:1;
-      stroke-width:1px;
-      stroke-linecap:butt;
-      stroke-linejoin:miter;
-      stroke-opacity:1;
-      font-weight: 800;
-		}
-
-    text.tick-text2 {
-			font-family: "arial";
-			font-size: 14px;
-			fill: #000000;
-		}
-
-    @media screen and (max-width: 1200px) {
+		@media screen and (max-width: 1200px) {
       .estudante-icon:before {
         content: "\1F9D1 \200D \1F393";
         font-size: 14px;
       }
-
       #autorizado-icon:before {
         content: "\1F44D";
         font-size: 16px;
       }
-
       #disponivel-icon:before {
         content: "\1F441";
         font-size: 16px;
       }
-
       #fechado-icon:before {
         content: "\1F91D";
         font-size: 16px;
       }
-
       th {
         padding-top: 16px !important;
         padding-right: 2px !important;
         padding-left: 3px !important;
       }
-
     }
     
     @media screen and (min-width: 1201px) {
       .estudante-icon:before {
         content: "Estudante";
       }
-
       #autorizado-icon:before {
         content: "Autorizado";
       }
- 
       #disponivel-icon:before {
         content: "Disponível";
       }
-
       #fechado-icon:before {
         content: "Fechado";
       }
-
     }
-
-
 	</style>
 
   {% include "tabelas_includes.html" %}
@@ -120,7 +63,6 @@
     href="{% url 'proposta_submissao' %}"
     >&#10133;</a></small>
   </span>
-  
 
   {% comment %} Seletor da edição da pesquisa {% endcomment %}
   {% include "edicoes.html" %}
@@ -131,26 +73,17 @@
     <script>
       var publicados = 0
       var fechados = 0
-
-      var tmp_computacao = 0
-      var tmp_mecatronica = 0
-      var tmp_mecanica = 0
-
-      var alunos_computacao = 0
-      var alunos_mecatronica = 0
-      var alunos_mecanica = 0
-
-      var alunos_computacao_disponivel = 0
-      var alunos_mecatronica_disponivel = 0
-      var alunos_mecanica_disponivel = 0
-
     </script>
 
     {% if propostas %}
       <div class="table-responsive">
       <table id="PropostasTable" class="table table-bordered table-hover table-sm" style="width: 100%;">
         <caption style="text-align:right">
-          <small style="font-size:12px"><b>C</b>: Computação | <b>X</b>: Mecatrônica | <b>M</b>: Mecânica</small>
+          <small style="font-size:12px">
+            {% for curso in cursos %}
+              <b>{{curso.sigla_curta}}</b>: {{curso.nome}} {% if not forloop.last %}|{% endif %}
+            {% endfor %}
+          </small>
         </caption>
         <thead class="table-info">
         <tr>
@@ -290,18 +223,10 @@
                 {% if proposta.get_nativamente == curso %}<b data-toggle="tooltip" data-html="true" animation="true" title="proposta nativamente para estudantes de {{curso.nome}}">{% endif %}
                   <span>{{curso.sigla_curta}}</span>
                 {% if proposta.get_nativamente == curso %}</b>{% endif %}
-                <script>
-                  {% if curso.sigla_curta == "C" %}tmp_computacao += 1;{% endif %}
-                  {% if curso.sigla_curta == "X" %}tmp_mecatronica += 1;{% endif %}
-                  {% if curso.sigla_curta == "M" %}tmp_mecanica += 1;{% endif %}
-                </script>
               {% endfor %}
               
               <!-- Se não defido conta para os 3 cursos -->
               {% if not proposta.perfil1.all %}
-                <script>tmp_computacao += 1</script>
-                <script>tmp_mecatronica += 1</script>
-                <script>tmp_mecanica += 1</script>
                 {% if not disponivel %}
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 {% else %}
@@ -315,18 +240,10 @@
                 {% if proposta.get_nativamente == curso %}<b data-toggle="tooltip" data-html="true" animation="true" title="proposta nativamente para estudantes de {{curso.nome}}">{% endif %}
                   <span>{{curso.sigla_curta}}</span>
                 {% if proposta.get_nativamente == curso %}</b>{% endif %}
-                <script>
-                  {% if curso.sigla_curta == "C" %}tmp_computacao += 1;{% endif %}
-                  {% if curso.sigla_curta == "X" %}tmp_mecatronica += 1;{% endif %}
-                  {% if curso.sigla_curta == "M" %}tmp_mecanica += 1;{% endif %}
-                </script>
               {% endfor %}
 
               <!-- Se não defido conta para os 3 cursos -->
               {% if not proposta.perfil2.all %}
-                <script>tmp_computacao += 1</script>
-                <script>tmp_mecatronica += 1</script>
-                <script>tmp_mecanica += 1</script>
                 {% if not disponivel %}
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 {% else %}
@@ -340,18 +257,10 @@
                 {% if proposta.get_nativamente == curso %}<b data-toggle="tooltip" data-html="true" animation="true" title="proposta nativamente para estudantes de {{curso.nome}}">{% endif %}
                   <span>{{curso.sigla_curta}}</span>
                 {% if proposta.get_nativamente == curso %}</b>{% endif %}
-                <script>
-                  {% if curso.sigla_curta == "C" %}tmp_computacao += 1;{% endif %}
-                  {% if curso.sigla_curta == "X" %}tmp_mecatronica += 1;{% endif %}
-                  {% if curso.sigla_curta == "M" %}tmp_mecanica += 1;{% endif %}
-                </script>
               {% endfor %}
 
               <!-- Se não defido conta para os 3 cursos -->
               {% if not proposta.perfil3.all %}
-                <script>tmp_computacao += 1</script>
-                <script>tmp_mecatronica += 1</script>
-                <script>tmp_mecanica += 1</script>
                 {% if not disponivel %}
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 {% else %}
@@ -365,18 +274,10 @@
                 {% if proposta.get_nativamente == curso %}<b data-toggle="tooltip" data-html="true" animation="true" title="proposta nativamente para estudantes de {{curso.nome}}">{% endif %}
                   <span>{{curso.sigla_curta}}</span>
                 {% if proposta.get_nativamente == curso %}</b>{% endif %}
-                <script>
-                  {% if curso.sigla_curta == "C" %}tmp_computacao += 1;{% endif %}
-                  {% if curso.sigla_curta == "X" %}tmp_mecatronica += 1;{% endif %}
-                  {% if curso.sigla_curta == "M" %}tmp_mecanica += 1;{% endif %}
-                </script>
               {% endfor %}
 
               <!-- Se não defido conta para os 3 cursos -->
               {% if not proposta.perfil4.all %}
-                <script>tmp_computacao += 1</script>
-                <script>tmp_mecatronica += 1</script>
-                <script>tmp_mecanica += 1</script>
                 {% if not disponivel %}
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 {% else %}
@@ -399,22 +300,6 @@
             </td>
 
           </tr>
-
-          <script>
-            alunos_computacao += tmp_computacao;
-            alunos_mecatronica += tmp_mecatronica;
-            alunos_mecanica += tmp_mecanica;
-
-            {% if disponivel %}
-              alunos_computacao_disponivel += tmp_computacao;
-              alunos_mecatronica_disponivel += tmp_mecatronica;
-              alunos_mecanica_disponivel += tmp_mecanica;
-            {% endif %}
-
-            tmp_computacao = 0;
-            tmp_mecatronica = 0;
-            tmp_mecanica = 0;
-          </script>
 
         {% endwith %}
         {% endfor %}
@@ -440,236 +325,27 @@
       {% with nao_disponivel=True %}
         {% include "propostas_nativamente.html" %}
       {% endwith %}
-    
+
       <p>&nbsp;</p>
-      <strong>Vagas para estudantes de computação:</strong> 
-      
-      <span id="alunos_computacao_disponivel"></span>
-        <script>$("#alunos_computacao_disponivel").html(alunos_computacao_disponivel);</script>
-            <a data-toggle="tooltip" data-html="true" animation="true" title="Contando propostas que a organização desistiua após pubicação ou que não foram aprovados pelo comitê do PFE.">
-          (<span id="alunos_computacao"></span><script>$("#alunos_computacao").html(alunos_computacao);</script>)
-        </a><br>
-
-      <strong>Vagas para estudantes de mecatrônica:</strong> 
-      <span id="alunos_mecatronica_disponivel"></span>
-        <script>$("#alunos_mecatronica_disponivel").html(alunos_mecatronica_disponivel);</script>
-            <a data-toggle="tooltip" data-html="true" animation="true" title="Contando propostas que a organização desistiua após pubicação ou que não foram aprovados pelo comitê do PFE.">
-          (<span id="alunos_mecatronica"></span><script>$("#alunos_mecatronica").html(alunos_mecatronica);</script>)
-        </a><br>
-
-      <strong>Vagas para estudantes de mecânica:</strong> 
-      <span id="alunos_mecanica_disponivel"></span>
-        <script>$("#alunos_mecanica_disponivel").html(alunos_mecanica_disponivel);</script>
-        <a data-toggle="tooltip" data-html="true" animation="true" title="Contando propostas que a organização desistiua após pubicação ou que não foram aprovados pelo comitê do PFE.">
-          (<span id="alunos_mecanica"></span><script>$("#alunos_mecanica").html(alunos_mecanica);</script>)
-        </a><br>
+      <strong>Vagas para estudantes de:</strong><br>
+      {% for curso, vaga in vagas.items %}
+        &nbsp;&nbsp;{{curso}}: {{vaga}}<br>
+      {% endfor %}
 
     <p>&nbsp;</p>
     <p>&nbsp;</p>
 
-  <h5>Plot Ternário de Propostas entre Cursos</h5>
-  <div id="plot"></div>
+    <h5>Plot de Propostas entre Cursos</h5>
+    <div id="plot"></div>
 
-  {% include "organizacao-modal.html" %}
+    {% include "organizacao-modal.html" %}
 
-  {% comment %} <script charset="UTF-8" src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.2.0/d3.min.js"></script> {% endcomment %}
-  <script charset="UTF-8" src="{% static 'd3/d3.min.js' %}"></script>
-
-  <!-- https://gist.github.com/widged/5780720 -->
-  <script>
-  (function() {
-
-    let width = screen.width-20;
-    if(width>800) { // Nao quero graficos maior que 800
-      width=800
-    }
-
-    var svg = d3.select('#plot').append('svg')
-                .attr("width", width)
-                .attr("height", width);
-
-      var w = width*0.8;
-      var h = w*0.9;
-      
-      var m = 20;
-
-      svg.append("text")
-          .attr("x", 10)
-          .attr("y", h )
-          .attr("transform", "rotate(-60 10 "+h+")")
-          .text("Computação")
-          .classed('tick-text tick-a', true);
-
-      svg.append("text")
-          .attr("x", w-20)
-          .attr("y", h+40 )
-          .text("Mecatrônica")
-          .classed('tick-text tick-b', true);
-
-      svg.append("text")
-          .attr("x", ((w/2)+50))
-          .attr("y", 20 )
-          .attr("transform", "rotate(60 "+((w/2)+50)+" 20)")
-          .text("Mecânica")
-          .classed('tick-text tick-c', true);
-
-    svg.append("circle")
-      .attr("cx", (w/2)-80)
-      .attr("cy", h+55)
-      .attr("r", 7)
-      .attr("fill", "teal");
-      
-    svg.append("text")
-      .attr("x", (w/2)-70)
-      .attr("y", h+60)
-      .text("autorizado")
-      .classed('tick-text2 tick-p', true);
-
-    svg.append("circle")
-      .attr("cx", (w/2)+60)
-      .attr("cy", h+55)
-      .attr("r", 7)
-      .attr("fill", "brown");
-      
-    svg.append("text")
-      .attr("x", (w/2)+70)
-      .attr("y", h+60)
-      .text("pendente")
-      .classed('tick-text2 tick-y', true);
-
-
-    var corners = [[m,h+m], [w+m,h+m], [(w/2)+m,m]]
-
-    corners.forEach(function(corner, idx) { 
-      var c1 = idx, c2 = idx + 1; if(c2 >= corners.length) { c2 = 0;}
-      svg.append("line")
-        .attr("x1", corners[c1][0])
-        .attr("y1", corners[c1][1])
-        .attr("x2", corners[c2][0])
-        .attr("y2", corners[c2][1])
-        .classed('axis', true);	
-    })
-
-    var ticks = [0,20,40,60,80,100], n = ticks.length;
-    ticks.forEach(function(v) {
-      
-      var coord1 = coord(v, 0, 100-v);
-      var coord2 = coord(v, 100-v, 0);
-      var coord3 = coord(0, 100-v, v);
-      var coord4 = coord(100-v, 0, v);
-
-      if(v !== 0 && v !== 100) {
-
-        svg.append("line")
-          .attr("x1", coord1[0])
-          .attr("y1", coord1[1])
-          .attr("x2", coord2[0])
-          .attr("y2", coord2[1])
-          .classed('tick tick-a', true);	
-
-        svg.append("line")
-          .attr("x1", coord2[0])
-          .attr("y1", coord2[1])
-          .attr("x2", coord3[0])
-          .attr("y2", coord3[1])
-          .classed('tick tick-b', true);	
-
-        svg.append("line")
-          .attr("x1", coord3[0])
-          .attr("y1", coord3[1])
-          .attr("x2", coord4[0])
-          .attr("y2", coord4[1])
-          .classed('tick tick-c', true);	
-
-      }
-      svg.append("text")
-        .attr("x", coord1[0] - 15)
-              .attr("y", coord1[1]  )
-              .text( function (d) { return v; })
-              .classed('tick-text tick-a', true);
-
-      svg.append("text")
-        .attr("x", coord2[0] - 6)
-              .attr("y", coord2[1] + 10 )
-              .text( function (d) { return (100- v); })
-              .classed('tick-text tick-b', true);
-
-      svg.append("text")
-        .attr("x", coord3[0] + 6)
-              .attr("y", coord3[1] )
-              .text( function (d) { return v; })
-              .classed('tick-text tick-c', true);
-
-      })
-
-      dados_aprovados = [
-        {% for ter in ternario_aprovados %}
-          coord({{ter.0}}, {{ter.1}}, {{ter.2}}, {{ter.3}}, "{{ter.4}}"),
-        {% endfor %} 
-      ]
-
-      dados_pendentes = [
-        {% for ter in ternario_pendentes %}
-          coord({{ter.0}}, {{ter.1}}, {{ter.2}}, {{ter.3}}, "{{ter.4}}"),
-        {% endfor %} 
-      ]
-
-      var circles_aprovados = svg.selectAll("circle_a").data(dados_aprovados);
-
-      circles_aprovados.enter().append("circle")
-        .attr("cx", function (d) { return d[0]; })
-        .attr("cy", function (d) { return d[1]; })
-        .attr("r", function (d) { return d[2]; })
-        .attr("fill", "teal");
-        
-      circles_aprovados.enter().append("text")
-        .attr("x", function (d) { return d[0]+d[2]; })
-        .attr("y", function (d) { return d[1]-d[2]; })
-        .text( function (d) { return d[3]; })
-        .classed('tick-text tick-p', true);
-
-      var circles_pendentes = svg.selectAll("circle_p").data(dados_pendentes);
-
-      circles_pendentes.enter().append("circle")
-        .attr("cx", function (d) { return d[0]; })
-        .attr("cy", function (d) { return d[1]; })
-        .attr("r", function (d) { return d[2]; })
-        .attr("fill", "brown");
-        
-      circles_pendentes.enter().append("text")
-        .attr("x", function (d) { return d[0]+d[2]; })
-        .attr("y", function (d) { return d[1]+7+(d[2]/2); })
-        .text( function (d) { return d[3]; })
-        .classed('tick-text tick-y', true);
-
-
-      function coord(a, b, c, r, t){
-        var sum, pos = [0,0];
-          sum = a + b + c;
-          if(sum !== 0) {
-            a /= sum;
-            b /= sum;
-            c /= sum;
-
-          pos[0] =  corners[0][0]  * a + corners[1][0]  * b + corners[2][0]  * c;
-          pos[1] =  corners[0][1]  * a + corners[1][1]  * b + corners[2][1]  * c;
-          pos[2] = r;
-          pos[3] = t;
-        }
-          return pos;
-      }
-      function scale(/* point */ p, factor) {
-          return [p[0] * factor, p[1] * factor];
-      }
-    })()
-
-    </script>
+    {% include "plot.html" %}
 
     {% endif %}
 
     <script>
-      function carrega_pagina() {
-      };
+      function carrega_pagina() {};
       window.onload = carrega_pagina
     </script>
 
