--- a/projetos/templates/projetos/distribuicao_areas.html
+++ b/projetos/templates/projetos/distribuicao_areas.html
@@ -46,150 +46,79 @@
 
     <div id="tudo">
 
-    <span class="titulo">Tendência de Áreas de Interesse</span><br>
+        <span class="titulo">Tendência de Áreas de Interesse</span><br>
 
-    {% comment %} Seletor do tipo de pesquisa {% endcomment %}
-    <label id="labelTipo" for="filterTipo"><b>Tipo:</b></label>
-    <select class="filter" id="filterTipo">
-        <option value="estudantes">Estudantes</option>
-        <option value="propostas">Propostas</option>
-        <option value="projetos">Projetos</option>
-    </select>
-    &nbsp;&nbsp;&nbsp;
+        {% comment %} Seletor da edição da pesquisa {% endcomment %}
+        {% include "edicoes.html" with com_cursos=True com_tipos=True %}
+        <br>
 
-    {% comment %} Seletor da edição da pesquisa {% endcomment %}
-    <label id="labelEdicao" for="filterEdicao"><b>Edição:</b></label>
-    <select class="filter" id="filterEdicao">
-        <option value="todas">todas</option>
-        {% for loop in loop_anos %}
-            <option value="{{loop}}.2" {% if ano == loop and semestre == 2 %}selected{% endif %}>{{loop}}.2</option>
-            <option value="{{loop|add:1}}.1" {% if ano == loop|add:1 and semestre == 1 %}selected{% endif %}>{{loop|add:1}}.1</option>
-        {% endfor %}
-    </select>
-    &nbsp;&nbsp;&nbsp;
+        <div class="atualizar" style="line-height:80%;">
 
-    {% comment %} Seletor do filtro de cursos para a pesquisa {% endcomment %}
-    <label id="labelCurso" for="filterCurso"><b>Curso:</b></label>
-    <select class="filter" id="filterCurso">
-        <option value="todos">todos</option>
-        <option value="C">Computação</option>
-        <option value="M">Mecânica</option>
-        <option value="X">Mecatrônica</option>
-    </select>
-    &nbsp;
+            <div class="2areas2" style="line-height: 1.3;">
+                <ul class="chart">
+                {% for key, value in areaspfe.items %}
+                    <span
+                        {% comment %} Tooltip para a descrição da área de interesse. {% endcomment %}
+                        {% if value.1 %}
+                            data-toggle="tooltip" data-html="true" animation="true" title="{{value.1}}"
+                        {% endif %}
+                        >
+                        {{key}}<br>
+                    </span>
+                    <li class="past" title="" style="margin-top:0px; margin-bottom: 12px;">
+                        <span class="bar" data-number="{{value.0.count}}"></span>
+                        <span data-toggle="tooltip" data-html="true" animation="true"
+                        {% if tipo == "estudantes" %}
+                            title="{% for user in value.0 %}[{{user.usuario.aluno2.sigla_curta}}] - {{user.usuario.get_full_name}}{% comment %}&amp;lt;{{user.usuario.email}}&amp;gt;{% endcomment %}&lt;br&gt;{% endfor %}"
+                        {% elif tipo == "propostas" %}
+                            title="{% for proposta in value.0 %}{{proposta}}&lt;br&gt;{% endfor %}"
+                        {% elif tipo == "projetos" %}
+                            title="{% for projeto in value.0 %}{{projeto}}&lt;br&gt;{% endfor %}"
+                        {% endif %}
+                        class="number">{{value.0.count}}</span>
+                        
+                    </li>
+                {% endfor %}
+                </ul>
+            </div>
 
-    <span id="spinner" style="visibility: hidden">
-        <span class="spinner-border text-secondary" style="width: 1.2rem; height: 1.2rem;" role="status" aria-hidden="true">
-            <span class="sr-only input-group-text">Carregando...</span>
-        </span>
-    </span>
-
-    <br>
-
-    <div style="line-height:80%;"><br></div>
-
-        <div class="2areas2" style="line-height: 1.3;">
-            <ul class="chart">
-            {% for key, value in areaspfe.items %}
-                <span
-                    {% comment %} Tooltip para a descrição da área de interesse. {% endcomment %}
-                    {% if value.1 %}
-                        data-toggle="tooltip" data-html="true" animation="true" title="{{value.1}}"
-                    {% endif %}
-                    >
-                    {{key}}<br>
-                </span>
-                <li class="past" title="" style="margin-top:0px; margin-bottom: 12px;">
-                    <span class="bar" data-number="{{value.0.count}}"></span>
-                    <span data-toggle="tooltip" data-html="true" animation="true"
-                    {% if tipo == "estudantes" %}
-                        title="{% for user in value.0 %}[{{user.usuario.aluno2.sigla_curta}}] - {{user.usuario.get_full_name}}{% comment %}&amp;lt;{{user.usuario.email}}&amp;gt;{% endcomment %}&lt;br&gt;{% endfor %}"
-                    {% elif tipo == "propostas" %}
-                        title="{% for proposta in value.0 %}{{proposta}}&lt;br&gt;{% endfor %}"
-                    {% elif tipo == "projetos" %}
-                        title="{% for projeto in value.0 %}{{projeto}}&lt;br&gt;{% endfor %}"
-                    {% endif %}
-                    class="number">{{value.0.count}}</span>
-                    
-                </li>
+            <b>Outras:</b> 
+            {% for outra in outras %}
+                {{outra.outras}}{% if not forloop.last %},{% endif %}
             {% endfor %}
-        </ul>
 
-        <b>Outras:</b> 
-        {% for outra in outras %}
-            {{outra.outras}}{% if not forloop.last %},{% endif %}
-        {% endfor %}
-
-        <br><br>
-        {% if tipo == "estudantes" %}
-            Total de Estudantes: {{total}} <small>(total de estudantes que preencheram algum campo: {{total_preenchido}})</small><br>
-        {% elif tipo == "propostas" %}
-            Total de Propostas: {{total}}<br>
-        {% elif tipo == "projetos" %}
-            Total de Projetos: {{total}}<br>
-        {% endif %} 
+            <br><br>
+            {% if tipo == "estudantes" %}
+                Total de Estudantes: {{total}} <small>(total de estudantes que preencheram algum campo: {{total_preenchido}})</small><br>
+            {% elif tipo == "propostas" %}
+                Total de Propostas: {{total}}<br>
+            {% elif tipo == "projetos" %}
+                Total de Projetos: {{total}}<br>
+            {% endif %} 
         </div>
-    
-    </div>
+        
+        <script>
+            function carrega_pagina() {bar();};
+            function carrega_site() {carrega_pagina();};
+            window.onload = carrega_site
+        </script>
 
-
-    <script>
-
-        var request_ajax_d = null;
-
-        function atualiza_tabela() {
-
-            if (request_ajax_d != null){ 
-                request_ajax_d.abort();
-                request_ajax_d = null;
-            }
-            
-            $("#spinner").css("visibility", "visible");
-            var tipo = $("#filterTipo option:selected").attr("value");
-            var edicao = $("#filterEdicao option:selected").attr("value");
-            var curso =  $("#filterCurso option:selected").attr("value");
-            request_ajax_d = $.ajax({
-                type: "POST",
-                url: "{% url 'distribuicao_areas' %}",
-                data: {
-                    tipo: tipo,
-                    edicao: edicao,
-                    curso: curso,
-                    'csrfmiddlewaretoken': '{{ csrf_token }}',
-                },
-                success: function(response){
-                    $("div.2areas2").replaceWith($("div.2areas2",response));
-                    {% include "tooltips.js" %}
-                    bar();
-                    $("#spinner").css("visibility", "hidden");
-                },
-                error: function (request, status, error) {
-                    {% if user.tipo_de_usuario == 4 %} 
-                      alert(request.responseText);
-                      jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
-                      console.log('error'+request.responseText);
-                    {% else %}
-                      jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
-                    {% endif %}
+        <script>
+            // Botao de curso só faz sentido se tipo == estudantes, senão é desabilitado
+            $("#filterTipo").change(function() {
+                if($("#filterTipo option:selected").attr("value") == "estudantes") {
+                    $("#filterCurso").removeAttr('disabled');
+                    $("#labelCurso").css('color', 'black');
+                } else {
+                    $("#filterCurso").attr('disabled', 'disabled');
+                    $("#filterCurso").val("todos");
+                    $("#labelCurso").css('color', 'grey');
                 }
             });
-        }
+        </script> 
 
-        $(".filter").change(atualiza_tabela);  // Caso algum seletor selecionado a tabela é atualizada
+        {% include "edicoes_ajax.html" with com_cursos=True com_tipo=True %}
 
-        // Botao de curso só faz sentido se tipo == estudantes, senão é desabilitado
-        $("#filterTipo").change(function() {
-            if($("#filterTipo option:selected").attr("value") == "estudantes") {
-                $("#filterCurso").removeAttr('disabled');
-                $("#labelCurso").css('color', 'black');
-            } else {
-                $("#filterCurso").attr('disabled', 'disabled');
-                $("#filterCurso").val("todos");
-                $("#labelCurso").css('color', 'grey');
-            }
-            
-        });
-
-    </script>
+    </div>
 
 {% endblock %}
