comentando codigo que não deve estar sendo usado

--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -4,9 +4,14 @@
     Data: 6 de Dezembro de 2020
 {% endcomment %}
 
+{% comment %} 
+DESCONFIO QUE NINGUEM USA MAIS ISSO, ASSIM ESTOU REMOVENDO
+SE SUMIR EM ALGUM LUGAR VAMOS JA PERCEBER {% endcomment %}
+
 {% comment %} Seletor do filtro de cursos para a pesquisa {% endcomment %}
 {% comment %} {% if cursos %} {% endcomment %}
 
+  {% comment %} 
   <label id="labelCurso" for="filterCurso"><b>Curso:</b></label>
   <select class="filter" id="filterCurso">
       <option value="T">todos</option>
@@ -14,5 +19,6 @@
       <option value="M">Mecânica</option>
       <option value="X">Mecatrônica</option>
   </select>
+  {% endcomment %}
 
 {% comment %} {% endif %} {% endcomment %}
