--- a/users/templates/users/estudantes_inscritos.html
+++ b/users/templates/users/estudantes_inscritos.html
@@ -12,6 +12,7 @@
 
   <script src="{% static 'js/w3.js' %}"></script>
   <script src="{% static 'js/Chart.min.js' %}"></script>
+  <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script>
 
   <style>
     th, td {
@@ -31,81 +32,67 @@
 
   {% include "informacoes.html" %}
 
-  {% comment %} <script>
-    $("#informacoes").detach().appendTo("#lateral");
-  </script> {% endcomment %}
-
   <div class="atualizar">
 
-    {% if alunos_list %}
-        <table id="AlunosTable">
-          <tr>
-              <th class="text-center">C</th>
-              <th onclick="w3.sortHTML('#AlunosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Estudante</th>
-              <th onclick="w3.sortHTML('#AlunosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Curso</th>
-              <th onclick="w3.sortHTML('#AlunosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">CR</th>
-          </tr>
-          {% for aluno,opcoes,opcoestemp in alunos_list %} 
-          <tr class="item">
-            <td class="{% if opcoes.count >= 5 %}text-success{% elif opcoestemp.count >= 5 %}text-warning{% else %}text-danger{% endif %}"> &#x2B24; </td>
-            <td>
-              <a href="{% url 'estudante_detail' aluno.id %}"
-                  data-toggle="tooltip" data-html="true" animation="true" title="
-                  {% for opcao in opcoes %}
-                    <b>#{{ opcao.prioridade }} :</b>
-                    {% with alocacoes=aluno.alocacao_set %}
-                      {% if alocacoes.count and opcao.proposta == alocacoes.last.projeto.proposta %}
-                        <u>
-                      {% endif %}
-                          {{opcao.proposta.titulo}}
-                        ({{opcao.proposta.organizacao.nome}})
-                      {% if alocacoes.count and opcao.proposta == alocacoes.last.projeto.proposta %}
-                        </u>
-                      {% endif %}
-                    {% endwith %}
-                    |{% mede_aderencia aluno opcao.proposta %}%|
-                    <br>
-                  {% empty %}
-                    Estudante não escolheu opções de proposta de projetos
-                  {% endfor %}
-                  "
-              >
-                {{aluno.user.get_full_name}}
-              </a>
+    <table id="AlunosTable">
+      <tr>
+          <th class="text-center">C</th>
+          <th onclick="w3.sortHTML('#AlunosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Estudante</th>
+          <th onclick="w3.sortHTML('#AlunosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Curso</th>
+          <th onclick="w3.sortHTML('#AlunosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">CR</th>
+      </tr>
+      {% for aluno,opcoes,opcoestemp in alunos_list %} 
+        <tr class="item">
+          <td class="{% if opcoes.count >= 5 %}text-success{% elif opcoestemp.count >= 5 %}text-warning{% else %}text-danger{% endif %}"> &#x2B24; </td>
+          <td>
+            <a href="{% url 'estudante_detail' aluno.id %}"
+                data-toggle="tooltip" data-html="true" animation="true" title="
+                {% for opcao in opcoes %}
+                  <b>#{{ opcao.prioridade }} :</b>
+                  {% with alocacoes=aluno.alocacao_set %}
+                    {% if alocacoes.count and opcao.proposta == alocacoes.last.projeto.proposta %}
+                      <u>
+                    {% endif %}
+                        {{opcao.proposta.titulo}}
+                      ({{opcao.proposta.organizacao.nome}})
+                    {% if alocacoes.count and opcao.proposta == alocacoes.last.projeto.proposta %}
+                      </u>
+                    {% endif %}
+                  {% endwith %}
+                  |{% mede_aderencia aluno opcao.proposta %}%|
+                  <br>
+                {% empty %}
+                  Estudante não escolheu opções de proposta de projetos
+                {% endfor %}
+                "
+            >
+              {{aluno.user.get_full_name}}
+            </a>
+          </td>
+          {% if aluno.curso2 %}
+            <td style="color:#{{ aluno.curso2.cor }};">
+              {{ aluno.curso2 }}
             </td>
-            {% if aluno.curso2 %}
-              <td style="color:#{{ aluno.curso2.cor }};">
-                {{ aluno.curso2 }}
-              </td>
-            {% else %}
-              <td>
-                <b>CURSO NÃO DEFINIDO</b>
-              </td>
-            {% endif %}
-            <td>
-              {{ aluno.cr|floatformat:4 }}
-            </td>
-          </tr>
-          {% endfor %}
-        </table>
-        <br>
-    {% else %}
-      <p>Não existem estudantes disponíveis.</p>
-    {% endif %}
+          {% else %}
+            <td><b>CURSO NÃO DEFINIDO</b></td>
+          {% endif %}
+          <td>
+            {{ aluno.cr|floatformat:4 }}
+          </td>
+        </tr>
+      {% endfor %}
+    </table>
+    <br>
     
     <text class="text-success">&#x2B24;</text> Estudante já selecionou propostas ({{inscritos}}) [{% widthratio inscritos num_alunos 100 %}%]<br>
     <text class="text-warning">&#x2B24;</text> Estudante realizou seleção provisória ({{tmpinscritos}}) [{% widthratio tmpinscritos num_alunos 100 %}%]<br>
     <text class="text-danger">&#x2B24;</text> Estudante ainda precisa selecionar propostas ({{ninscritos}}) [{% widthratio ninscritos num_alunos 100 %}%]<br>
     <br>
 
-    <strong>Total de Estudantes Aplicando:</strong> {{ num_alunos }}
-    <small>(comp={{ num_alunos_comp }},
-    mec={{ num_alunos_mec }},
-    mxt={{ num_alunos_mxt }})</small>
-    <br>
+    <strong>Total de Estudantes Aplicando:</strong> {{ num_alunos }}<br>
 
-    <div id="canvas-holder">
-      <canvas id="chart-area"></canvas>
+    <div id="canvas-holder" class="chart-container">
+      <canvas style="height:330px; max-width:380px" id="chart-area"></canvas>
     </div>
 
     <script>
@@ -113,22 +100,14 @@
         type: 'pie',
         data: {
           datasets: [{
-            data: [
-              {{ num_alunos_comp }},
-              {{ num_alunos_mec }},
-              {{ num_alunos_mxt }},
-            ],
-            backgroundColor: [
-              '#58508D',
-              '#28A39B',
-              '#BC5090',
-            ],
+            data: [{% for qtd in num_estudantes_curso.values %}{{qtd}},{% endfor %}],
+            backgroundColor: [{% for curso in num_estudantes_curso %}'#{{curso.cor}}',{% endfor %}],
             label: 'Proporção entre estudantes'
           }],
           labels: [
-            'Computação [{% widthratio num_alunos_comp num_alunos 100 %}%]',
-            'Mecânica [{% widthratio num_alunos_mec num_alunos 100 %}%]',
-            'Mecatrônica [{% widthratio num_alunos_mxt num_alunos 100 %}%]',
+            {% for course, qtd in num_estudantes_curso.items %}
+              '{{course}} [{% widthratio qtd num_alunos 100 %}%]',  
+            {% endfor %}
           ]
         },
         options: {
@@ -145,9 +124,16 @@
               fontColor: "#333",
               fontSize: 14
             }
-          }
+          },
+          plugins: {
+            datalabels: {
+              color: '#000',
+            }
+          },
         }
       };
+
+      
 
       function carrega_graficos() {
         var ctx = document.getElementById('chart-area').getContext('2d');
