--- a/administracao/templates/administracao/cadastra_usuario.html
+++ b/administracao/templates/administracao/cadastra_usuario.html
@@ -51,6 +51,9 @@
 
     <br><br>
 
+    <label for="telefone">telefone:</label><input type="text" size="20" maxlength="20" id="telefone" name="telefone" value="{{usuario.telefone}}"><br>
+    <label for="celular">celular:</label><input type="text" size="20" maxlength="20" id="celular" name="celular" value="{{usuario.celular}}"><br>
+    <label for="instant_messaging">IM:</label><input type="text" size="32" maxlength="32" id="instant_messaging" name="instant_messaging" value="{{usuario.instant_messaging}}"><br>
     
     <label for="linkedin">LinkedIn:</label> <input type="text" size="73" maxlength="{{linkedin_length|add:-2}}" id="linkedin" name="linkedin" value="{% if usuario.linkedin %}{{usuario.linkedin}}{% endif %}" placeholder="https://www.linkedin.com/"><br>
 
@@ -130,10 +133,6 @@
       <br>
       
       <label style="margin-top: 10px;" for="cargo">cargo:</label><input type="text" size="50" maxlength="90" id="cargo" name="cargo" value="{{usuario.parceiro.cargo}}"><br>
-      
-      <label for="telefone">telefone:</label><input type="text" size="20" maxlength="20" id="telefone" name="telefone" value="{{usuario.parceiro.telefone}}"><br>
-      <label for="celular">celular:</label><input type="text" size="20" maxlength="20" id="celular" name="celular" value="{{usuario.parceiro.celular}}"><br>
-      <label for="instant_messaging">IM:</label><input type="text" size="32" maxlength="32" id="instant_messaging" name="instant_messaging" value="{{usuario.parceiro.instant_messaging}}"><br>
 
       <input type="checkbox" id="principal_contato" name="principal_contato" value="True" {% if usuario.parceiro.principal_contato %}checked{% endif %}>
       <label for="principal_contato"> Principal Contato</label><br>
